--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,17 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dot": "^1.1.3",
+    "dotenv": "^16.5.0",
+    "env": "^0.0.2",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.0",
+    "mongoose": "^8.16.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7",
-    "stripe": "^17.3.1"
+    "nodemon": "^3.1.10",
+    "stripe": "^17.7.0"
   }
 }
